--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,10 +1,38 @@
+<% if flash[:alert] %>
+  <div class="alert alert-warning">
+    <%= flash[:alert] %>
+  </div>
+<% end %>
+
+<% if flash[:notice] %>
+  <div class="alert alert-success">
+    <%= flash[:notice] %>
+  </div>
+<% end %>
+
 <% provide(:title, @category.name) %>
 
 <h1><%= @category.name %>の詳細</h1>
 
-<p>期限: <%= @category.deadline.strftime("%Y/%m/%d") %></p>
+<%= form_with(model: @category, local: true, method: :patch) do |form| %>
+    <div>
+      <%= form.label :deadline, "カテゴリの期限" %>
+      <%= form.date_field :deadline, value: @category.deadline %>
+    </div>
+  
+    <div>
+      <%= form.label :status, "カテゴリのステータス" %>
+      <%= form.select :status, ["未完了", "作業中", "完了"], selected: @category.status %>
+    </div>
+  
+    <%= form.submit "カテゴリの更新" %>
+  <% end %>
+  
+  <p>カテゴリの期限: <%= @category.deadline.strftime("%Y/%m/%d") %></p>
+  <p>カテゴリのステータス: <%= @category.status %></p>
+  
 
-<% if @todos.present? %>  <!-- @todosが存在する場合のみ表示 -->
+<% if @todos.present? %> 
   <table>
     <thead>
       <tr>
@@ -18,7 +46,6 @@
       <% @todos.each do |todo| %>
         <tr>
           <td>
-            <!-- 更新用フォーム -->
             <%= form_with(model: [@category, todo], local: true, method: :patch) do |form| %>
               <%= form.text_field :name, value: todo.name %>
           </td>
@@ -32,8 +59,8 @@
               <%= form.submit "更新" %>
             <% end %>
             
-            <!-- 削除用ボタンは別フォームで定義 -->
             <%= button_to "削除", category_todo_path(@category, todo), method: :delete, data: { confirm: "このToDoを削除しますか？" } %>
+            
           </td>
         </tr>
       <% end %>
