--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -14,26 +14,25 @@
 
 <h1><%= @category.name %>の詳細</h1>
 
-<%= form_with(model: @category, local: true, method: :patch) do |form| %>
-    <div>
-      <%= form.label :deadline, "カテゴリの期限" %>
-      <%= form.date_field :deadline, value: @category.deadline %>
-    </div>
-  
-    <div>
-      <%= form.label :status, "カテゴリのステータス" %>
-      <%= form.select :status, ["未完了", "作業中", "完了"], selected: @category.status %>
-    </div>
-  
-    <%= form.submit "カテゴリの更新" %>
-  <% end %>
-  
-  <p>カテゴリの期限: <%= @category.deadline.strftime("%Y/%m/%d") %></p>
-  <p>カテゴリのステータス: <%= @category.status %></p>
-  
+<%= form_with(model: @category, local: true, method: :patch, class: "form-group") do |form| %>
+  <div class="form-field">
+    <%= form.label :deadline, "カテゴリの期限" %>
+    <%= form.date_field :deadline, class: "form-control", value: @category.deadline %>
+  </div>
+
+  <div class="form-field">
+    <%= form.label :status, "カテゴリのステータス" %>
+    <%= form.select :status, ["未完了", "作業中", "完了"], class: "form-control", selected: @category.status %>
+  </div>
+
+  <%= form.submit "カテゴリの更新", class: "btn btn-warning" %>
+<% end %>
+
+<p>カテゴリの期限: <%= @category.deadline.strftime("%Y/%m/%d") %></p>
+<p>カテゴリのステータス: <%= @category.status %></p>
 
 <% if @todos.present? %> 
-  <table>
+  <table class="table table-hover">
     <thead>
       <tr>
         <th>ToDo名</th>
@@ -46,21 +45,19 @@
       <% @todos.each do |todo| %>
         <tr>
           <td>
-            <%= form_with(model: [@category, todo], local: true, method: :patch) do |form| %>
-              <%= form.text_field :name, value: todo.name %>
+            <%= form_with(model: [@category, todo], local: true, method: :patch, class: "form-inline") do |form| %>
+              <%= form.text_field :name, class: "form-control", value: todo.name %>
           </td>
           <td>
-              <%= form.select :status, ["未完了", "作業中", "完了"], selected: todo.status %>
+              <%= form.select :status, ["未完了", "作業中", "完了"], class: "form-control", selected: todo.status %>
           </td>
           <td>
-              <%= form.date_field :deadline, value: todo.deadline %>
+              <%= form.date_field :deadline, class: "form-control", value: todo.deadline %>
           </td>
           <td>
-              <%= form.submit "更新" %>
+              <%= form.submit "更新", class: "btn btn-success" %>
             <% end %>
-            
-            <%= button_to "削除", category_todo_path(@category, todo), method: :delete, data: { confirm: "このToDoを削除しますか？" } %>
-            
+            <%= button_to "削除", category_todo_path(@category, todo), method: :delete, data: { confirm: "このToDoを削除しますか？" }, class: "btn btn-danger" %>
           </td>
         </tr>
       <% end %>
@@ -72,18 +69,18 @@
 
 <h2>新しいTodoを追加</h2>
 
-<%= form_with(model: [@category, @category.todos.build], local: true) do |form| %>
-  <div>
+<%= form_with(model: [@category, @category.todos.build], local: true, class: "form-group") do |form| %>
+  <div class="form-field">
     <%= form.label :name, "Todo名" %>
-    <%= form.text_field :name, required: true %>
+    <%= form.text_field :name, class: "form-control", required: true %>
   </div>
 
-  <div>
+  <div class="form-field">
     <%= form.label :deadline, "期限" %>
-    <%= form.date_field :deadline, required: true %>
+    <%= form.date_field :deadline, class: "form-control", required: true %>
   </div>
 
-  <%= form.submit "Todoを追加" %>
+  <%= form.submit "Todoを追加", class: "btn btn-primary" %>
 <% end %>
 
-<%= link_to 'カテゴリ一覧に戻る', user_home_path(current_user) %>
+<%= link_to 'カテゴリ一覧に戻る', user_home_path(current_user), class: "btn btn-secondary" %>
